[package]
name = "signalume"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "signalume_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Android-only: read the live Wi-Fi RSSI straight from the platform's
# WifiManager over JNI (no separate Kotlin plugin needed). We borrow the live
# JavaVM + Activity from `tao` — the same window layer Tauri already runs on —
# since Tauri's Android app is a Java Activity (not a NativeActivity), so the
# usual `ndk_context` global is never populated.
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
tao = "0.35"

